--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,5 @@
 @import 'utilities/variables',
         'utilities/mixins',
-        'base/base';
+        'base/base',
+        'layout/load/load',
+        'layout/style/style';
